java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldPrimitive-hints.pass
Create Field t in org.netbeans.test.java.hints.CreateFieldPrimitive
Create Parameter t
Create Local Variable t
